# Kifuwarabe_WCSC28

./: Cargo.toml  LICENSE  README.md  grayscale_kifuwarust_engine.exe.config.toml  テスト用position.txt  テスト用のコマンド.txt
profile/: Engine.toml
src/: config.rs  main.rs
src/consoles/: asserts.rs  commands.rs  mod.rs  unit_test.rs
src/consoles/visuals/: dumps.rs  mod.rs  title.rs
src/entities/: mod.rs
src/entities/consoles/: asserts.rs  commands.rs  unit_test.rs
src/entities/jotai/: ky.rs  number_board.rs  uchu.rs  uchu_impl.rs
src/entities/kasetu/: atamakin.rs
src/entities/logging/: mod.rs
src/entities/siko/: randommove.rs  think.rs
src/entities/syazo/: sasite_seisei.rs  sasite_sentaku.rs
src/entities/teigi/: conv.rs  shogi_syugo.rs  shogi_syugo_seki.rs
src/entities/tusin/: usi.rs
src/entities/visions/: vision_tree.rs
src/genmove/: mod.rs  sasite_element.rs  sasite_seisei.rs  sasite_sentaku.rs
src/jotai/: ky.rs  mod.rs  number_board.rs  uchu.rs  uchu_impl.rs
src/jotai/mediators/: med_kikisu.rs  mod.rs
src/kasetu/: atamakin.rs  mod.rs
src/meidai/: math_meidai.rs  mod.rs
src/siko/: mod.rs  randommove.rs  think.rs
src/siko/cards/: ido_random_card.rs  mod.rs
src/siko/results/: jisatusyu_result.rs  komatori_result.rs  mod.rs
src/siko/visions/: mod.rs  vision_tree.rs
src/syazo/: mod.rs  sasite_element.rs  sasite_seisei.rs  sasite_sentaku.rs
src/take1base/: mod.rs
src/teigi/: constants.rs  conv.rs  mod.rs  shogi_syugo.rs  shogi_syugo_seki.rs
src/teigi/banjometries/: mod.rs  (+2 more)
src/tusin/: mod.rs  usi.rs
src/visions/: vision_tree.rs
(+19 files in other folders)
